# discord-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml  swamp-bot.nomad
.github/workflows/: ci.yml  docker-build.yml
src/: bot.py  llm.py  openrouterllm.py  shrek_chat.py
tests/: test_bot.py  test_shrek_chat.py
